make-a-wish-salesforce/src/objects/npsp__Engagement_Plan_Template__c.object
<CustomObject>
    <description>An Engagement Plan Template defines the process and associated set of tasks required to complete an Engagement Plan. To apply the process to a particular record, you must assign the Engagement Plan to the record.</description>
    <fields>
        <fullName>npsp__Automatically_Update_Child_Task_Due_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recalculates a child Task&apos;s due date based on when the parent Task was actually completed.</description>
        <inlineHelpText>Recalculates a child Task&apos;s due date based on when the parent Task was actually completed.</inlineHelpText>
        <label>Automatically Update Child Task Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Default_Assignee__c</fullName>
        <description>When an Engagement Plan Task&apos;s Assigned To field is left blank, who should the Task be assigned to?</description>
        <inlineHelpText>When an Engagement Plan Task&apos;s Assigned To field is left blank, who should the Task be assigned to?</inlineHelpText>
        <label>Default Assignee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner of Object for Engagement Plan</fullName>
                </value>
                <value>
                    <fullName>User Creating Engagement Plan</fullName>
                    <default>true</default>
                    <label>User Creating Engagement Plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Reschedule_To__c</fullName>
        <description>Should Tasks with Due Dates on a weekend day be scheduled for the Friday before the weekend or the Monday after? This applies only if Skip Weekend is selected.</description>
        <inlineHelpText>Should Tasks with Due Dates on a weekend day be scheduled for the Friday before the weekend or the Monday after? This applies only if Skip Weekend is selected.</inlineHelpText>
        <label>Reschedule To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                    <default>true</default>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Skip_Weekends__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, Tasks created in this Engagement Plan will not have Due Dates that fall on Saturday or Sunday.</description>
        <inlineHelpText>If selected, Tasks created in this Engagement Plan will not have Due Dates that fall on Saturday or Sunday.</inlineHelpText>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Engagement_Plans__c</fullName>
        <label>Total Engagement Plans</label>
        <summaryForeignKey>npsp__Engagement_Plan__c.npsp__Engagement_Plan_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <summaryForeignKey>npsp__Engagement_Plan_Task__c.npsp__Engagement_Plan_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Engagement Plan Template</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Engagement Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>